# changelog-from-commits

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/changelog_from_commits/: __init__.py  cli.py  generator.py  gitlog.py
tests/: test_cli.py  test_generator.py  test_gitlog.py
